changed name and added top package directory

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "mortgage-calculator"
+name = "sensible_mortgage"
 version = "0.1.0"
 description = "A simple python package to provide mortgage repayment calculations using the French method of amortization"
 authors = ["Jonathan Mair <jonathan.mair@gmail.com>"]
