--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.11"
 pandas = "^2.0.3"
 param = "^1.13.0"
 panel = "^1.2.0"
+hvplot = "^0.8.4"
 
 [tool.poetry.group.dev.dependencies]
 131228_pytest_1 = "^1.0.0"
