--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ hvplot = "^0.8.4"
 pytest = "^7.4.0"
 jupyter = "1.0.0"
 notebook = "6.5.4"
+plotly = "^5.15.0"
 
 [build-system]
 requires = ["poetry-core"]
