--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ notebook = "6.5.4"
 plotly = "^5.15.0"
 sphinx = "^7.1.1"
 black = "^23.7.0"
+twine = "^4.0.2"
 
 [build-system]
 requires = ["poetry-core"]
