--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "parameterized_mortgage"
-version = "0.1.0"
+version = "0.1.2"
 description = "A simple python package to provide mortgage repayment calculations using the French method of amortization"
 authors = ["Jonathan Mair <jonathan.mair@gmail.com>"]
 license = "GNU V3"
@@ -25,6 +25,9 @@ plotly = "^5.15.0"
 sphinx = "^7.1.1"
 black = "^23.7.0"
 twine = "^4.0.2"
+
+[tool.poetry.scripts]
+dashboard = "parameterized_mortgage.dashboard:demo"
 
 [build-system]
 requires = ["poetry-core"]
